adds about title

--- a/src/utils/i18n/locales/en/en.json
+++ b/src/utils/i18n/locales/en/en.json
@@ -8,6 +8,7 @@
   "footer": "Let's talk!",
   "hero": "Passionate about learning and always looking for new challenges ",
   "about": {
+    "title": "About me",
     "part1": "Hi! I am Ana Carolina, a front-end developer specializing in HTML, CSS, and JavaScript, and I am continuously enhancing my skills with modern frameworks like React.",
     "part2": "Though I am just starting my professional journey, I have built several personal projects, including responsive single-page apps and landing pages. These projects have sharpened my problem-solving abilities and taught me how to turn design concepts into functional and engaging user experiences.",
     "part3": "I love learning new technologies and aim to create applications with clean code that are efficient, accessible, and meet user expectations. I look forward to bringing my enthusiasm and dedication to a team!"
