--- a/src/utils/i18n/locales/pt/pt.json
+++ b/src/utils/i18n/locales/pt/pt.json
@@ -8,6 +8,7 @@
   "footer": "Vamos conversar!",
   "hero": "Adoro aprender algo novo e estou sempre em busca de novos desafios.",
   "about": {
+    "title": "Sobre mim",
     "part1": "Oi! Eu sou Ana Carolina, uma desenvolvedora front-end, especializada em HTML, CSS e JavaScript. Estou continuamente aprimorando minhas habilidades com frameworks modernos como o React.",
     "part2": "Embora eu esteja apenas começando minha jornada profissional, já desenvolvi alguns projetos pessoais, incluindo single-page apps e landing pages responsivos. Esses projetos aprimoraram minhas habilidades de resolução de problemas e me ensinaram a transformar designs em experiências funcionais e atraentes para os usuários.",
     "part3": "Adoro aprender novas tecnologias e tenho como objetivo criar aplicações com códigos limpos, que são eficientes, acessíveis e que atendam às expectativas dos usuários. Estou animada para trazer meu entusiasmo e dedicação para uma equipe!"
